syntax = "proto3";

package courseservice;

option go_package = "proto/courseservicepb";

service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc ReadCourse(ReadCourseRequest) returns (ReadCourseResponse);
  rpc ReadAllCoursesByOwnerId(ReadAllCoursesByOwnerIdRequest) returns (ReadAllCoursesByOwnerIdResponse);
  rpc ReadAllCoursesByGroupIds(ReadAllCoursesByGroupIdsRequest) returns (ReadAllCoursesByGroupIdsResponse);
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
}

message Course {
  string id = 1;
  string title = 2;
  string description = 3;
  string access_type = 4;
  bool is_published = 5;
  string owner_id = 6;
}

message CreateCourseRequest {
  string title = 1;
  string description = 2;
  string access_type = 3;
  string owner_id = 4;
}

message CreateCourseResponse {
  Course course = 1;
}

message ReadCourseRequest {
  string id = 1;
}

message ReadCourseResponse {
  Course course = 1;
}

message ReadAllCoursesByOwnerIdRequest {
  string owner_id = 1;
}

message ReadAllCoursesByOwnerIdResponse {
  repeated Course courses = 1;
}

message ReadAllCoursesByGroupIdsRequest {
  repeated string group_ids = 1;
}

message ReadAllCoursesByGroupIdsResponse {
  repeated Course courses = 1;
}

message UpdateCourseRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string access_type = 4;
  bool is_published = 5;
}

message UpdateCourseResponse {
  Course course = 1;
}

message DeleteCourseRequest {
  string id = 1;
}

message DeleteCourseResponse {
}
