syntax = "proto3";

package lessonservice;

option go_package = "proto/lessonservicepb";

service LessonService {
  rpc CreateLesson(CreateLessonRequest) returns (CreateLessonResponse);
  rpc ReadLesson(ReadLessonRequest) returns (ReadLessonResponse);
  rpc ReadAllLessonsByModuleId(ReadAllLessonsByModuleIdRequest) returns (ReadAllLessonsByModuleIdResponse);
  rpc UpdateLesson(UpdateLessonRequest) returns (UpdateLessonResponse);
  rpc DeleteLesson(DeleteLessonRequest) returns (DeleteLessonResponse);
}

message Lesson {
  string id = 1;
  string title = 2;
  string description = 3;
  string content = 4;
  int64 position = 5;
  string course_id = 6;
}

message CreateLessonRequest {
  string title = 1;
  string description = 2;
  string content = 3;
  string course_id = 4;
}

message CreateLessonResponse {
  Lesson lesson = 1;
}

message ReadLessonRequest {
  string id = 1;
}

message ReadLessonResponse {
  Lesson lesson = 1;
}

message ReadAllLessonsByModuleIdRequest {
  string module_id = 1;
}

message ReadAllLessonsByModuleIdResponse {
  repeated Lesson lessons = 1;
}

message UpdateLessonRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 position = 4;
  string course_id = 5;
}

message UpdateLessonResponse {
  Lesson lesson = 1;
}

message DeleteLessonRequest {
  string id = 1;
}

message DeleteLessonResponse {
}
