syntax = "proto3";

package moduleservice;

option go_package = "proto/moduleservicepb";

service ModuleService {
  rpc CreateModule(CreateModuleRequest) returns (CreateModuleResponse);
  rpc ReadModule(ReadModuleRequest) returns (ReadModuleResponse);
  rpc ReadAllModulesByCourseId(ReadAllModulesByCourseIdRequest) returns (ReadAllModulesByCourseIdResponse);
  rpc UpdateModule(UpdateModuleRequest) returns (UpdateModuleResponse);
  rpc DeleteModule(DeleteModuleRequest) returns (DeleteModuleResponse);
}

message Module {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 position = 4;
  string course_id = 5;
}

message CreateModuleRequest {
  string title = 1;
  string description = 2;
  string course_id = 3;
}

message CreateModuleResponse {
  Module module = 1;
}

message ReadModuleRequest {
  string id = 1;
}

message ReadModuleResponse {
  Module module = 1;
}

message ReadAllModulesByCourseIdRequest {
  string course_id = 1;
}

message ReadAllModulesByCourseIdResponse {
  repeated Module modules = 1;
}

message UpdateModuleRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 position = 4;
  string module_id = 5;
}

message UpdateModuleResponse {
  Module module = 1;
}

message DeleteModuleRequest {
  string id = 1;
}

message DeleteModuleResponse {
}
